added Phase Listener

--- a/src/main/resources/bakkerij/messages.properties
+++ b/src/main/resources/bakkerij/messages.properties
@@ -1,3 +1,6 @@
+###############################################################################
+# Copyright (c) 2015 Tom Cleymans
+###############################################################################
 application.title=Bakkerij Cleymans - De Lukken
 application.footer=created by tcleyman
 # this properties file is used for bakkerij.xhtml
